# dura.ai

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: ci.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/alerts/: page.tsx
app/dashboard/logs/: page.tsx
app/dashboard/runs/: page.tsx
app/dashboard/runs/[id]/: page.tsx
app/dashboard/workers/: page.tsx
components/: CodeBlock.tsx  DurableLog.tsx  LiveDemo.tsx
components/dashboard/: ComingSoon.tsx  LiveOverview.tsx  LiveTimeline.tsx  LogPanel.tsx  RunsTable.tsx  Sidebar.tsx  StatCard.tsx  StatusPill.tsx  StepStrip.tsx  StepTimeline.tsx  Topbar.tsx
docs/: docs.json  mint.json  quickstart.mdx
docs/api/: context.mdx  durable.mdx
docs/concepts/: durable-execution.mdx  exactly-once.mdx  saga-rollback.mdx
docs/cookbook/: booking-with-refund.mdx  langchain-agent.mdx  protect-stripe.mdx
dura/: __init__.py  emit.py  log.py  runtime.py
examples/: book_trip.py  demo.py  research_agent.py  side_by_side.py
lib/: live.ts  mock-data.ts  status.ts  types.ts
marketing/: make_carousel.py
tests/: _worker.py  test_emit.py  test_exactly_once.py  test_integration.py  test_resume.py  test_saga.py  test_wal.py
