[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dura"
version = "0.0.1"
description = "Durable execution for AI agents — exactly-once, crash-proof, rollback-able actions."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "dura" }]
keywords = ["ai", "agents", "durable-execution", "workflow", "idempotency"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools]
packages = ["dura"]

[tool.pytest.ini_options]
testpaths = ["tests"]
